--- a/res/css/base.css
+++ b/res/css/base.css
@@ -139,7 +139,7 @@ a {
 	min-width: 980px;
 	min-height: 631px;
 	max-height: 731px;
-	background: url(res/img/bg_mask_01.png);
+	background: url(../img/bg_mask_01.png);
 	background: rgba(0, 0, 0, 0.7);
 	overflow: hidden;
 }
@@ -186,13 +186,13 @@ a {
 }
 .floating-panel .floating-panel-close :link:before,
 .floating-panel .floating-panel-close :visited:before {
-	content: url(res/img/icon_close_01.png);
+	/* content: url(../img/icon_close_01.png); */
 	padding-right: 2px;
 	vertical-align: -1px;
 }
 .floating-panel .floating-panel-close :link:hover:before,
 .floating-panel .floating-panel-close :visited:hover:before {
-	content: url(res/img/icon_close_01_h.png);
+	/* content: url(../img/icon_close_01_h.png); */
 }
 
 .floating-panel-body .floating-panel-buttons {
@@ -205,7 +205,9 @@ a {
 .floating-panel-body .floating-panel-buttons input[type=submit] {
 	border-style: none;
 	background-color: #000000;
-	background:  url(res/img/bg_panel_btn-left_01.png) top left no-repeat, url(res/img/bg_panel_btn-right_01.png) top right no-repeat, url(res/img/bg_panel_btn-center_01.png) top left repeat-x;
+	/* background:  url(../img/bg_panel_btn-left_01.png) top left no-repeat, 
+				 url(../img/bg_panel_btn-right_01.png) top right no-repeat, 
+				 url(../img/bg_panel_btn-center_01.png) top left repeat-x; */
 	color: #ffffff;
 	font-family: "adobe-garamond-pro-1","adobe-garamond-pro-2",serif;
 	font-size: 16px;
@@ -225,17 +227,23 @@ a {
 .floating-panel-body .floating-panel-buttons input[type=button].cancel,
 .floating-panel-body .floating-panel-buttons input[type=submit].cancel {
 	background: #444444;
-	background:  url(res/img/bg_panel_cancelbtn-left_01.png) top left no-repeat, url(res/img/bg_panel_cancelbtn-right_01.png) top right no-repeat, url(res/img/bg_panel_cancelbtn-center_01.png) top center repeat-x;
+	/* background:  url(../img/bg_panel_cancelbtn-left_01.png) top left no-repeat, 
+	url(../img/bg_panel_cancelbtn-right_01.png) top right no-repeat, 
+	url(../img/bg_panel_cancelbtn-center_01.png) top center repeat-x; */
 }
 .floating-panel-body .floating-panel-buttons input[type=button].cancel:hover,
 .floating-panel-body .floating-panel-buttons input[type=submit].cancel:hover {
 	background: #4c4c4c;
-	background:  url(res/img/bg_panel_cancelbtn-left_01_h.png) top left no-repeat, url(res/img/bg_panel_cancelbtn-right_01_h.png) top right no-repeat, url(res/img/bg_panel_cancelbtn-center_01_h.png) top center repeat-x;
+	/* background:  url(../img/bg_panel_cancelbtn-left_01_h.png) top left no-repeat, 
+	url(../img/bg_panel_cancelbtn-right_01_h.png) top right no-repeat, 
+	url(../img/bg_panel_cancelbtn-center_01_h.png) top center repeat-x; */
 }
 .floating-panel-body .floating-panel-buttons input[type=button]:hover,
 .floating-panel-body .floating-panel-buttons input[type=submit]:hover {
 	background: #444444;
-	background:  url(res/img/bg_panel_btn-left_01_h.png) top left no-repeat, url(res/img/bg_panel_btn-right_01_h.png) top right no-repeat, url(res/img/bg_panel_btn-center_01_h.png) top center repeat-x;
+	/* background:  url(../img/bg_panel_btn-left_01_h.png) top left no-repeat, 
+	url(../img/bg_panel_btn-right_01_h.png) top right no-repeat, 
+	url(../img/bg_panel_btn-center_01_h.png) top center repeat-x; */
 }
 .floating-panel-body .floating-panel-buttons input[type=button][disabled],
 .floating-panel-body .floating-panel-buttons input[type=submit][disabled] {
