--- a/res/css/base.css
+++ b/res/css/base.css
@@ -16,7 +16,7 @@ html {
 	height: 100%;
 }
 body {
-	font-family: "adobe-garamond-pro-1","adobe-garamond-pro-2",garamond,serif;
+	font-family: Garamond, Georgia, serif;
 	font-size: 14px;
 	line-height: 16px;
 	height: 100%;
